# fugthon18

./: CMakeLists.txt  README.md  fugthon  sync_activeScene.track  veipoer_final
include/: audioStream.hpp
res/music/: gthon18.flac
res/shader/: aaltojavittu.glsl  barfft_frag.glsl  basic_frag.glsl  plasma3d_frag.glsl  post_frag.glsl  uniforms.glsl
src/: audioStream.cpp  main.cpp  main_skunkwork.cpp
